restyled hero font size

--- a/src/app/resume/scss/_resume.scss
+++ b/src/app/resume/scss/_resume.scss
@@ -1,38 +1,40 @@
-.resume { 
+.resume {
 	.hero {
 
 		height: 320px;
 
 		.overlay {
-			background: rgba(0, 0, 0, .3);
+			background: rgba(0, 0, 0, .2);
 		}
 
-		h1 { 
-			color: #fff; 
-			margin: 0; 
+		h1 {
+			color: #fff;
+			margin: 0;
 		}
-		
+
 		@media screen and (max-width: $screen-sm-max) {
 			background: url('../content/images/resume-phone.jpg');
 			background-size: cover;
 
 			.overlay {
-				height: 320px; 
+				height: 320px;
 			}
 
-			h1 { 
-				text-align: center; 
-				margin-top: 167.5px; 
+			h1 {
+				text-align: center;
+				margin-top: 167.5px;
 			}
 
 		}
 
 		@media screen and (min-width: $screen-md-min) {
 			background: url('../content/images/resume-desktop.jpg');
-			background-size: cover;	
+			background-size: cover;
 
-			h1 { 
-				line-height: 320px; 
+			h1 {
+				font-size: 90px;
+				line-height: 320px;
+				text-shadow: 4px 3px 0px #313436, 9px 8px 0px rgba(0, 0, 0, 0.15);
 			}
 		}
 	}
@@ -42,18 +44,18 @@
 
 		.main-skill-container {
 			text-align: center;
-		}	
+		}
 
 		.sub-skill-container {
 			text-align: center;
 		}
 
 		.sub-skill {
-			display: block; 
+			display: block;
 			font-size: 16px;
 			line-height: 28px;
 			color: $text-secondary;
-			margin-bottom: 5px; 
+			margin-bottom: 5px;
 		}
 
 		.image {
@@ -88,7 +90,7 @@
 		}
 
 		@media screen and (min-width: $screen-md-min) {
-			
+
 			padding-top: 120px;
 			padding-bottom: 120px;
 
@@ -99,4 +101,3 @@
 		}
 	}
 }
-
