--- a/src/app/contact/scss/_contact.scss
+++ b/src/app/contact/scss/_contact.scss
@@ -1,28 +1,33 @@
 .contacts {
-	
+
 	h1 { margin: 0; }
-	.hero { 
+	.hero {
 
 		height: 320px;
 
-		h1 { 
+		h1 {
 			line-height: 320px;
 			color: #fff;
 		}
 
 		.overlay {
-			background: rgba(0, 0, 0, .5);
+			background: rgba(0, 0, 0, .2);
 		}
 
-		@media screen and (max-width: $screen-sm-max) { 
+		@media screen and (max-width: $screen-sm-max) {
 			background: url('../content/images/contact-phone.jpg');
-			background-size: cover;	
+			background-size: cover;
 		}
 
 		@media screen and (min-width: $screen-md-min) {
 			background: url('../content/images/contact-desktop.jpg');
-			background-size: cover;	
+			background-size: cover;
+
+			h1 {
+				font-size: 90px;
+				text-shadow: 4px 3px 0px #313436, 9px 8px 0px rgba(0, 0, 0, 0.15);
+			}
 		}
 	}
-	
+
 }
