--- a/src/app/contact/html/contact.html
+++ b/src/app/contact/html/contact.html
@@ -1,28 +1,43 @@
 <div class="contacts">
-	<section class="hero">
-		<div class="overlay">
-			<div class="container"> 
-				<div class="row">
-					<div class="col-md-12">
-						<h1>Contact</h1>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+    <section class="hero">
+        <div class="overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>Contact</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-	<section class="contact">
-		<div class="container">
-			<div class="content">
-				<div>Email: yanwenwwang@gmail.com</div>
-				<a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">
-					linkedIn
-				</a>
-				<a href="https://github.com/Yanwenwang">
-					Github
-				</a>
-			</div>
-		</div>
-	</section>
+    <section class="contacts-info">
+        <div class="container">
+            <div class="content">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="info">Email: yanwenwwang@gmail.com</div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="info">
+                            <a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">linkedIn</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="info">
+                            <a href="https://github.com/Yanwenwang">Github</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 </div>
