replaced alerts with modals for tic tac toe

--- a/src/app/tic-tac-toe/html/modals/illegal-move.html
+++ b/src/app/tic-tac-toe/html/modals/illegal-move.html
@@ -3,5 +3,5 @@
 </div>
 
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="modalInstanceVM.ok()">OK</button>
+	<button class="btn btn-primary" ng-click="modalInfoVM.ok()">OK</button>
 </div>
