--- a/src/app/tic-tac-toe/html/modals/congratulations.html
+++ b/src/app/tic-tac-toe/html/modals/congratulations.html
@@ -7,5 +7,5 @@
 </div>
 
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="cancel()">Cancel</button>
+	<button class="btn btn-primary" ng-click="modalInstanceVM.ok()">Ok</button>
 </div>
