changed primary and accent colors

--- a/src/app/shared/scss/_color.scss
+++ b/src/app/shared/scss/_color.scss
@@ -1,10 +1,10 @@
-$primary: #F5F5F5;
-$primary-light: #C8E6C9;
+$primary: #FFFFFF;
+$primary-light: #FFBD88;
 $primary-dark: #81888D;
 
 
-$accent: #D75C37;
-$accent-hover: #D85339;
+$accent: #D85339;
+$accent-hover: #D75C37;
 
 $text: #6991AC;
 $text-secondary: #81888D;
