modified hero styling across all pages to overlap navbar

--- a/src/app/tic-tac-toe/scss/_tic-tac-toe.scss
+++ b/src/app/tic-tac-toe/scss/_tic-tac-toe.scss
@@ -2,6 +2,7 @@
 	.hero {
 
 		height: 320px;
+		margin-top: -55px;
 
 		.overlay {
 			background: rgba(0, 0, 0, .2);
@@ -10,13 +11,18 @@
 
 		h1 {
 			color: #fff;
-			line-height: 320px;
 			margin: 0;
 		}
 
 		@media screen and (max-width: $screen-sm-max) {
 			background: url('../content/images/tic-tac-toe-phone.jpg');
 			background-size: cover;
+
+			h1 {
+				text-align: center;
+				margin-top: 167.5px;
+			}
+			
 		}
 
 		@media screen and (min-width: $screen-md-min) {
@@ -25,6 +31,8 @@
 
 			h1 {
 				font-size: 80px;
+				line-height: 320px;
+				padding-top: 70px;
 				text-shadow: 4px 3px 0px #313436, 9px 8px 0px rgba(0, 0, 0, 0.15);
 			}
 		}
