--- a/src/main.css
+++ b/src/main.css
@@ -7940,55 +7940,60 @@ hr {
   /* line 21, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar ul li > a.active {
     color: #D75C37; }
-  /* line 25, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 23, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  .navbar .open > .btn-primary.dropdown-toggle {
+    background: transparent;
+    border: none; }
+  /* line 27, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .btn-group,
   .navbar .btn:active,
   .navbar .btn-group.open .dropdown-toggle {
-    box-shadow: none; }
-  /* line 27, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+    box-shadow: none;
+    outline: none; }
+  /* line 29, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .btn-primary {
     color: #FFFFFF;
     font-size: 16px;
     text-transform: uppercase;
     padding-left: 48px; }
-  /* line 28, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 30, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .btn-primary:hover {
     color: #D75C37; }
-  /* line 33, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 35, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .btn-primary,
   .navbar .btn-primary:active,
   .navbar .btn-primary:hover,
   .navbar .btn-primary:focus {
     border-color: transparent;
     background: transparent; }
-  /* line 35, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 37, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .fa {
     padding: 5px; }
-  /* line 36, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 38, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .fa-lg {
     border: 1px solid #FFFFFF;
     color: #FFFFFF;
     margin-top: 10px; }
-  /* line 37, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 39, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .navbar-collapse {
     background: grey;
     margin-top: 15px;
     position: absolute;
     left: 0;
     width: 100%; }
-  /* line 39, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 41, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .navbar-collapse a {
     color: #FFFFFF;
     margin: 20px; }
-  /* line 40, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 42, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .navbar-collapse a:hover {
     text-decoration: none; }
 
-/* line 44, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+/* line 46, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
 .dropdown-menu li a {
   text-transform: uppercase; }
 
-/* line 45, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+/* line 47, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
 .dropdown-menu li a:hover {
   background: #D75C37; }
 
