--- a/src/app/shared/scss/_nav.scss
+++ b/src/app/shared/scss/_nav.scss
@@ -1,47 +1,112 @@
 .navbar {
-	margin-bottom: 0px;
-	z-index: 1;
+    margin-bottom: 0;
+    z-index: 1;
 
-  .nav-brand { float: left; }
-	.nav-brand-logo { color: $primary; line-height: 51px; font-size: 28px; letter-spacing: 2px; transition: .5s ease-in;
-										text-decoration: none; }
-  .nav-brand-logo:hover { color: $accent-hover; }
-	.nav-brand-logo.active { color: $accent-hover; }
+    .nav-brand {
+        float: left;
+    }
+    .nav-brand-logo {
+        color: $primary;
+        line-height: 51px;
+        font-size: 28px;
+        letter-spacing: 2px;
+        transition: 0.5s ease-in;
+        text-decoration: none;
+    }
+    .nav-brand-logo:hover {
+        color: $accent-hover;
+    }
+    .nav-brand-logo.active {
+        color: $accent-hover;
+    }
 
-	ul { margin: 0; padding: 0; text-align: right; }
+    ul {
+        margin: 0;
+        padding: 0;
+        text-align: right;
+    }
 
-	ul li { list-style: none; display: inline-block; }
+    ul li {
+        list-style: none;
+        display: inline-block;
+    }
 
-	ul li > a { color: $primary; cursor: pointer; font-size: 16px; margin-left: 32px;
-							line-height: 51px; text-decoration: none; text-transform: uppercase; transition: .5s all;
-				}
+    ul li > a {
+        color: $primary;
+        cursor: pointer;
+        font-size: 16px;
+        margin-left: 32px;
+        line-height: 51px;
+        text-decoration: none;
+        text-transform: uppercase;
+        transition: 0.5s all;
+    }
 
-	ul li > a:hover { color: $accent-hover; }
+    ul li > a:hover {
+        color: $accent-hover;
+    }
+    
+    ul li > a.active {
+        color: $accent-hover;
+    }
 
-	ul li > a.active { color: $accent-hover; }
+    .open > .btn-primary.dropdown-toggle {
+        background: transparent;
+        border: none;
+    }
 
-	.open > .btn-primary.dropdown-toggle { background: transparent; border: none; }
+    .btn-group,
+    .btn:active,
+    .btn-group.open .dropdown-toggle {
+        box-shadow: none;
+        outline: none;
+    }
 
-	.btn-group,
-	.btn:active,
-	.btn-group.open .dropdown-toggle { box-shadow: none; outline: none; }
+    .btn-primary {
+        color: $primary;
+        font-size: 16px;
+        text-transform: uppercase;
+        padding-left: 48px;
+    }
+    .btn-primary:hover {
+        color: $accent-hover;
+    }
 
-	.btn-primary { color: $primary; font-size: 16px; text-transform: uppercase; padding-left: 48px; }
-	.btn-primary:hover { color: $accent-hover }
+    .btn-primary,
+    .btn-primary:active,
+    .btn-primary:hover,
+    .btn-primary:focus {
+        border-color: transparent;
+        background: transparent;
+    }
 
-	.btn-primary,
-	.btn-primary:active,
-	.btn-primary:hover,
-	.btn-primary:focus { border-color: transparent; background: transparent; }
+    .fa {
+        padding: 5px;
+    }
+    .fa-lg {
+        border: 1px solid $primary;
+        color: $primary;
+        margin-top: 10px;
+    }
+    .navbar-collapse {
+        background: grey;
+        margin-top: 15px;
+        position: absolute;
+        left: 0;
+        width: 100%;
+    }
+    .navbar-collapse a {
+        color: $primary;
+        margin: 20px;
+    }
+    .navbar-collapse a:hover {
+        text-decoration: none;
+    }
+}
 
-	.fa { padding: 5px; }
-	.fa-lg { border: 1px solid $primary; color: $primary; margin-top: 10px; }
-	.navbar-collapse { background: grey; margin-top: 15px; position: absolute; left: 0; width: 100%;
-										  }
-	.navbar-collapse a { color: $primary; margin: 20px; }
-	.navbar-collapse a:hover { text-decoration: none; }
-
- }
-
-.dropdown-menu li a { text-transform: uppercase; }
-.dropdown-menu li a:hover { background: $accent-hover; }
+.dropdown-menu li a {
+    text-transform: uppercase;
+}
+.dropdown-menu li a:hover {
+    background: $accent-hover;
+}
