styled contact page

--- a/src/app/contact/html/contact.html
+++ b/src/app/contact/html/contact.html
@@ -14,24 +14,34 @@
     <section class="contacts-info">
         <div class="container">
             <div class="content">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="info">Email: yanwenwwang@gmail.com</div>
-                    </div>
-                </div>
 
-                <div class="row">
+                <div class="row info-display">
                     <div class="col-md-4">
-                        <div class="info">
-                            <a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">linkedIn</a>
+                        <div class="info linkedin">
+                            <a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">
+                              <i class="fa fa-linkedin-square fa-3x"></i>
+                              linkedIn
+                            </a>
                         </div>
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row info-display">
                     <div class="col-md-4">
-                        <div class="info">
-                            <a href="https://github.com/Yanwenwang">Github</a>
+                        <div class="info github">
+                            <a href="https://github.com/Yanwenwang">
+                              <i class="fa fa-github-square fa-3x"></i>
+                              Github
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row info-display">
+                    <div class="col-md-4">
+                        <div class="info email">
+                          <i class="fa fa-envelope-o fa-3x"></i>
+                          yanwenwwang@gmail.com
                         </div>
                     </div>
                 </div>
