--- a/src/main.css
+++ b/src/main.css
@@ -7367,11 +7367,11 @@ h3 {
 .contacts .hero {
   height: 320px;
   margin-top: -55px; }
-  /* line 7, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
+  /* line 6, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
   .contacts .hero .overlay {
     background: rgba(0, 0, 0, 0.2);
     height: 320px; }
-  /* line 12, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
+  /* line 11, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
   .contacts .hero h1 {
     color: #FFFFFF;
     margin: 0; }
@@ -7380,7 +7380,7 @@ h3 {
     .contacts .hero {
       background: url("../content/images/contact-phone.jpg");
       background-size: cover; }
-      /* line 21, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
+      /* line 20, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
       .contacts .hero h1 {
         text-align: center;
         margin-top: 167.5px; } }
@@ -7389,20 +7389,41 @@ h3 {
     .contacts .hero {
       background: url("../content/images/contact-desktop.jpg");
       background-size: cover; }
-      /* line 31, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
+      /* line 30, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
       .contacts .hero h1 {
         font-size: 90px;
         line-height: 320px;
         padding-top: 70px;
-        text-shadow: 4px 3px 0px #313436, 9px 8px 0px rgba(0, 0, 0, 0.15); } }
+        text-shadow: 4px 3px 0 #313436, 9px 8px 0 rgba(0, 0, 0, 0.15); } }
 
-/* line 41, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
-.contacts .contacts-info .content {
-  margin-top: 64px; }
-
-/* line 42, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
-.contacts .contacts-info .info {
-  display: inline-block; }
+/* line 39, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
+.contacts .contacts-info {
+  position: relative;
+  text-align: center;
+  height: 320px; }
+  /* line 44, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
+  .contacts .contacts-info .content {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); }
+  /* line 50, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
+  .contacts .contacts-info .fa {
+    margin-bottom: 12px; }
+  /* line 53, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
+  .contacts .contacts-info .info-display,
+  .contacts .contacts-info .info {
+    display: inline-block;
+    font-size: 16px;
+    color: #D75C37;
+    margin-left: 24px; }
+  /* line 60, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
+  .contacts .contacts-info .info a {
+    color: #D85339;
+    text-decoration: none; }
+  /* line 64, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
+  .contacts .contacts-info .info a:hover {
+    color: #D85339; }
 
 /* line 3, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
 .home section {
@@ -7977,8 +7998,8 @@ hr {
   /* line 91, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .navbar-collapse {
     background: grey;
-    margin-top: 15px;
-    position: absolute;
+    position: fixed;
+    height: 100% !important;
     left: 0;
     width: 100%; }
   /* line 98, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
